--- a/build.gradle
+++ b/build.gradle
@@ -48,6 +48,8 @@ dependencies {
 	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.2'
 	implementation 'javax.xml.bind:jaxb-api:2.3.1'
 
+	implementation 'com.github.ulisesbocchio:jasypt-spring-boot-starter:3.0.5'
+
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
 
