--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,8 +1,3 @@
-server:
-  servlet:
-    session:
-      timeout: 1800
-
 spring:
   security:
     oauth2:
@@ -53,22 +48,57 @@ spring:
             user-info-uri: https://openapi.naver.com/v1/nid/me
             user-name-attribute: response
 
+
+server:
+  servlet:
+    session:
+      timeout: 1800
+
+jasypt:
+  encryptor:
+    bean: jasyptEncryptor
+    password: ${ENCRYPT_KEY}
+
+---
+
+spring:
+  config:
+    activate:
+      on-profile: local
+
   datasource:
-    url: jdbc:h2:mem:testdb
-    username: sa
-  h2:
-    console:
-      enabled: true
+    url: jdbc:mysql://localhost:3306/blog
+    username: root
+    password: 1234
+    driver-class-name: com.mysql.cj.jdbc.Driver
 
   jpa:
     show-sql: true
     properties:
       hibernate:
         format_sql: true
-    # 테이블 생성 후 sql 파일 실행
-    defer-datasource-initialization: true
+        hbm2ddl:
+          auto: none
+        dialect: org.hibernate.dialect.MySQLDialect
 
-jasypt:
-  encryptor:
-    bean: jasyptEncryptor
-    password: ${ENCRYPT_KEY}
+---
+
+spring:
+  config:
+    activate:
+      on-profile: test
+
+  datasource:
+    url: jdbc:h2:mem:testdb
+    username: sa
+
+  h2:
+    console:
+      enabled: true
+
+  jpa:
+    defer-datasource-initialization: true # 테이블 생성 후 sql 파일 실행
+    show-sql: true
+    properties:
+      hibernate:
+        format_sql: true
