--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -48,6 +48,8 @@ spring:
             user-info-uri: https://openapi.naver.com/v1/nid/me
             user-name-attribute: response
 
+  thymeleaf:
+    cache: false
 
 server:
   servlet:
