--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -66,6 +66,12 @@ jasypt:
     bean: jasyptEncryptor
     password: ${ENCRYPT_KEY}
 
+logging:
+  level:
+    sql: debug
+    orm:
+      jdbc:
+        bind: trace
 ---
 
 spring:
@@ -80,7 +86,6 @@ spring:
     driver-class-name: com.mysql.cj.jdbc.Driver
 
   jpa:
-    show-sql: true
     properties:
       hibernate:
         format_sql: true
