--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -51,6 +51,11 @@ spring:
   thymeleaf:
     cache: false
 
+  data:
+    redis:
+      host: localhost
+      port: 6379
+
   jpa:
     properties:
       hibernate:
