--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -110,7 +110,11 @@ spring:
   datasource:
     url: jdbc:h2:mem:testdb
     username: sa
-
+  jpa:
+    properties:
+      hibernate:
+        hbm2ddl:
+          auto: create
   h2:
     console:
       enabled: true
