--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -107,7 +107,7 @@ spring:
       on-profile: test
 
   datasource:
-    url: jdbc:h2:mem:testdb
+    url: jdbc:h2:tcp://localhost/~/blog
     username: sa
   jpa:
     properties:
