--- a/build.gradle
+++ b/build.gradle
@@ -57,6 +57,8 @@ dependencies {
 	annotationProcessor "jakarta.annotation:jakarta.annotation-api"
 	annotationProcessor "jakarta.persistence:jakarta.persistence-api"
 
+	implementation 'javax.xml.bind:jaxb-api:2.3.1'
+
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
 
