--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -15,3 +15,7 @@ spring:
       hibernate:
         hbm2ddl:
           auto: none
+
+profile:
+  default:
+    image-url: https://geunblog.s3.ap-northeast-2.amazonaws.com/user/default-user-image.jpg
