OAuth 인증 시 프로필 이미지 가져오도록 설정

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -21,6 +21,7 @@ spring:
             scope:
               - openid
               - profile_nickname
+              - profile_image
               - account_email
             provider: kakao
           naver:
