소셜 사용자 연동 해제 요청

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -93,6 +93,9 @@ jasypt:
 logging:
   level:
     org:
+      springframework:
+        transaction:
+          interceptor: trace
       hibernate:
         orm:
           jdbc:
