게시글 삭제 코드 리팩토링

--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -5,7 +5,7 @@ spring:
     import: application-aws.yml
 
   datasource:
-    url: jdbc:mysql://localhost:3306/blog
+    url: jdbc:mysql://localhost:3306/blog?rewriteBatchedStatements=true
     username: root
     password: 1234
     driver-class-name: com.mysql.cj.jdbc.Driver
@@ -15,6 +15,7 @@ spring:
       hibernate:
         hbm2ddl:
           auto: none
+        dialect: org.hibernate.dialect.MySQLDialect
 
 profile:
   default:
