--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -179,10 +179,8 @@ spring:
     url: jdbc:h2:tcp://localhost/~/blog
     username: sa
   jpa:
-    properties:
-      hibernate:
-        hbm2ddl:
-          auto: create
+    hibernate:
+      ddl-auto: update
   h2:
     console:
       enabled: true
