--- a/build.gradle
+++ b/build.gradle
@@ -35,10 +35,15 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-aop'
 	implementation 'org.springframework.boot:spring-boot-starter-mail'
 	implementation 'org.springframework.boot:spring-boot-starter-actuator'
+	implementation 'org.springframework.boot:spring-boot-starter-cache'
 	implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'
 
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.security:spring-security-test'
+
+	implementation 'net.datafaker:datafaker:2.3.1'
+	testImplementation 'org.jeasy:easy-random-core:5.0.0'
+	implementation 'org.jsoup:jsoup:1.15.3'
 
 	implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6'
 	testImplementation 'org.projectlombok:lombok:1.18.28'
@@ -58,6 +63,7 @@ dependencies {
 	implementation 'com.mysql:mysql-connector-j:8.0.33'
 
 	implementation 'com.github.ulisesbocchio:jasypt-spring-boot-starter:3.0.5'
+	implementation 'com.github.ben-manes.caffeine:caffeine'
 
 	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.6.0'
 
