--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -184,6 +184,11 @@ spring:
   h2:
     console:
       enabled: true
+logging:
+  level:
+    org.springframework.transaction.interceptor: debug
+    org.springframework.transaction: DEBUG
+    org.springframework.orm.jpa.JpaTransactionManager: DEBUG
 
 file:
   dir: C:/Users/User/Desktop/blog/upload
