--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -8,21 +8,23 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout
+        uses: actions/checkout@v3
 
-      - uses: actions/setup-java@v3
+      - name: Set up JDK 17
+        uses: actions/setup-java@v3
         with:
-          distribution: 'corretto'
           java-version: '17'
+          distribution: 'corretto'
 
       - name: Grant execute permession for gradlew
-        run: chmod +x gradlew
+        run: chmod +x ./gradlew
 
       - name: Set JASYPT encrypt key
         run: echo "ENCRYPT_KEY=${{ secrets.ENCRYPT_KEY }}" >> $GITHUB_ENV
 
       - name: Build with Gradle
-        run: ./gradlew clean build -Djasypt.encryptor.password=${{ secrets.ENCRYPT_KEY }}
+        run: ./gradlew clean build -Dspring.profiles.active=prod -x test
 
       - name: Get current time
         uses: josStorer/get-current-time@v2.0.2
@@ -41,6 +43,6 @@ jobs:
           aws_secret_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           application_name: blog server
           environment_name: Blogserver-env
-          version_label: github-action-${{steps.current-time.outputs.formattedTime}}
-          aws-region: ap-northeast-2
-          deployment_package: ./build/libs/${{env.artifact}}
+          version_label: github-action-${{ steps.current-time.outputs.formattedTime }}
+          region: ap-northeast-2
+          deployment_package: ./build/libs/${{ env.artifact }}
