--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -23,11 +23,11 @@ jobs:
       - name: Set JASYPT encrypt key
         run: echo "ENCRYPT_KEY=${{ secrets.ENCRYPT_KEY }}" >> $GITHUB_ENV
 
-      - name: Run tests with Gradle
-        run: ./gradlew test -Dspring.profiles.active=test -i
+#      - name: Run tests with Gradle
+#        run: ./gradlew test -Dspring.profiles.active=test -i
 
       - name: Build with Gradle
-        run: ./gradlew clean build -Dspring.profiles.active=prod
+        run: ./gradlew clean build -Dspring.profiles.active=prod -i -x test
 
       - name: Get current time
         uses: josStorer/get-current-time@v2.0.2
