--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -14,6 +14,8 @@ spring:
       client:
         registration:
           kakao:
-            redirect-uri: http://blogserver-env.eba-9p9i32bm.ap-northeast-2.elasticbeanstalk.com/login/oauth2/code/kakao
+#            redirect-uri: http://blogserver-env.eba-9p9i32bm.ap-northeast-2.elasticbeanstalk.com/login/oauth2/code/kakao
+            redirect-uri: http://geuns-blog.com/login/oauth2/code/kakao
           naver:
-            redirect-uri: http://blogserver-env.eba-9p9i32bm.ap-northeast-2.elasticbeanstalk.com/login/oauth2/code/naver
+#            redirect-uri: http://blogserver-env.eba-9p9i32bm.ap-northeast-2.elasticbeanstalk.com/login/oauth2/code/naver
+            redirect-uri: http://geuns-blog.com/login/oauth2/code/naver
