--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -5,9 +5,9 @@ spring:
 
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url:
-    username:
-    password:
+    url: ${RDS_PASSWORD}
+    username: ${RDS_USERNAME}
+    password: ${RDS_PASSWORD}
 
   security:
     oauth2:
@@ -20,5 +20,5 @@ spring:
 
   data:
     redis:
-      host:
-      port:
+      host: ${REDIS_HOST}
+      port: ${REDIS_PORT}
