local 환경, prod 환경 defaultProfileImage 수정

--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -22,3 +22,7 @@ spring:
     redis:
       host: ${REDIS_HOST}
       port: ${REDIS_PORT}
+
+profile:
+  default:
+    image-url: ${DEFAULT_IMAGE_URL}
