--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -112,4 +112,4 @@ cloud:
 
 profile:
   default:
-    image-url: https://geunblog.s3.ap-northeast-2.amazonaws.com/user/default-user-image.jpg
+    image-url: default_user.png
