--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 HELP.md
 .gradle
 build/
-http/
+/http/
 !gradle/wrapper/gradle-wrapper.jar
 !**/src/main/**/build/
 !**/src/test/**/build/
@@ -37,6 +37,4 @@ out/
 ### VS Code ###
 .vscode/
 /src/main/generated/
-/src/main/resources/application-aws.yml
 /src/main/resources/static/images/upload/
-!/http/
