--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@ HELP.md
 .gradle
 build/
 /http/
+/upload/
 !gradle/wrapper/gradle-wrapper.jar
 !**/src/main/**/build/
 !**/src/test/**/build/
@@ -37,4 +38,3 @@ out/
 ### VS Code ###
 .vscode/
 /src/main/generated/
-/src/main/resources/static/images/upload/
