--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -1,20 +1,17 @@
 spring:
   config:
     activate:
-      on-profile: local
+      on-profile: dev
 
   datasource:
-    driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/blog?rewriteBatchedStatements=true
-    username: root
-    password: 1234
-
-  thymeleaf:
-    cache: false
+    driver-class-name: org.h2.Driver
+    url: jdbc:h2:tcp://localhost/~/blog
+    username: sa
+    password:
 
   jpa:
     hibernate:
-      ddl-auto: none
+      ddl-auto: create
     show-sql: true
     properties:
       hibernate:
