--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -14,9 +14,9 @@ spring:
       client:
         registration:
           kakao:
-            redirect-uri: ${KAKAO_REDIRECT_URI}
+            redirect-uri: https://www.geuns-blog.com/login/oauth2/code/kakao
           naver:
-            redirect-uri: ${NAVER_REDIRECT_URI}
+            redirect-uri: https://www.geuns-blog.com/login/oauth2/code/naver
 
   data:
     redis:
