--- a/build.gradle
+++ b/build.gradle
@@ -71,6 +71,7 @@ dependencies {
 	annotationProcessor "jakarta.persistence:jakarta.persistence-api"
 
 	implementation 'javax.xml.bind:jaxb-api:2.3.1'
+	implementation 'org.json:json:20240303'
 
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
