카카오 logout redirect uri 개발/배포 환경 분리

--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -39,3 +39,7 @@ cloud:
 profile:
   default:
     image-url: ${DEFAULT_IMAGE_URL}
+
+kakao:
+  logout:
+    redirect-uri: ${KAKAO_LOGOUT_REDIRECT_URI}
