--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -18,7 +18,7 @@ jobs:
           java-version: '17'
           distribution: 'corretto'
 
-      - name: Grant execute permession for gradlew
+      - name: Grant execute permission for gradlew
         run: chmod +x ./gradlew
 
       - name: Build with Gradle
@@ -44,3 +44,4 @@ jobs:
           version_label: github-action-${{ steps.current-time.outputs.formattedTime }}
           region: ap-northeast-2
           deployment_package: ./build/libs/${{ env.artifact }}
+          wait_for_environment_recovery: 300
