--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -1,3 +1,5 @@
+
+
 spring:
   config:
     activate:
@@ -43,3 +45,5 @@ profile:
 kakao:
   logout:
     redirect-uri: https://www.geuns-blog.com/login
+server:
+  port: 5000
